--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<section class="splash">
+  <h1>Budget APP💸</h1>
+  <%= render partial: "devise/shared/notification"%>
+  <div class="regBtns">
+    <%= link_to "LOG IN", new_user_session_path, data: {turbo: false}, class: "buttons" %>
+    <%= link_to "SIGN UP", new_user_registration_path, data: {turbo: false}, class: "buttons" %>
+  </div>
+</section>
